# pyramid-dg-debug

./: CMakeLists.txt  README.md  backtrace.txt  conditions.xml  main.cpp  mesh_gen.sh  modules-loaded  tet_pyr.msh  tet_pyr.xml  tet_pyr_face.py
